# coordination_oru_ros

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  build.gradle  coordinator_default_config.rviz  package.xml  settings.gradle
coordination_oru_ros/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  README.md  build.gradle  package.xml
coordination_oru_ros/coordinator/: .project  build.gradle  build.gradle.luigi
coordination_oru_ros/coordinator/src/main/java/se/oru/coordination/coordinator/calibration/: CalibrationMainNode.java  CalibrationScenarioGenerator.java  SensorCalibrationMainNode.java
coordination_oru_ros/coordinator/src/main/java/se/oru/coordination/coordinator/calibration/matlab/: lemniscate.m  plot_lemniscate.m
coordination_oru_ros/coordinator/src/main/java/se/oru/coordination/coordinator/rk4_coordinator/test/: TestTECwithMPHourglass.java  TestTECwithMPSine.java  TestTrajectoryEnvelopeCoordinatorWithMotionPlanner2.java  TestTrajectoryEnvelopeCoordinatorWithMotionPlanner2a.java  TestTrajectoryEnvelopeCoordinatorWithMotionPlanner2b.java  TestTrajectoryEnvelopeCoordinatorWithMotionPlanner4.java  (+1 more)
coordination_oru_ros/coordinator/src/main/java/se/oru/coordination/coordinator/ros_coordinator/: ComputeTaskServiceMotionPlanner.java  IliadMission.java  TrajectoryEnvelopeCoordinatorROS.java  TrajectoryEnvelopeTrackerROS.java
coordination_oru_ros/coordinator/src/main/java/se/oru/coordination/coordinator/util/: IliadMissions.java
coordination_oru_ros/gradle/wrapper/: gradle-wrapper.properties
coordination_oru_ros/launch/: coordinated_click_n_pick.launch  empty_world_one_truck_manipulation_test.launch  load_robot_params.launch  multiple_trucks.launch  multiple_trucks_aass_basement.launch  multiple_trucks_aass_basement_3_rviz_viewpoints.launch  multiple_trucks_aass_basement_point_and_click.launch  multiple_trucks_aass_basement_point_and_click_iliad_smp.launch  multiple_trucks_arena_cycle.launch  multiple_trucks_arena_cycle_2.launch  multiple_trucks_arena_cycle_3.launch  multiple_trucks_arena_cycle_3_remote.launch  multiple_trucks_arena_cycle_4.launch  multiple_trucks_arena_cycle_remote.launch  multiple_trucks_arena_point_and_click.launch  multiple_trucks_arena_point_and_click_remote.launch  multiple_trucks_empty_point_and_click.launch  multiple_trucks_iliad_smp.launch  multiple_trucks_robot_lab_point_and_click.launch  multiple_trucks_robot_lab_point_and_click_remote.launch  ncfm_demo_three_trucks.launch  ncfm_demo_two_trucks.launch  ncfm_demo_two_trucksSmp.launch  ncfm_demo_two_trucks_obstacle_handling.launch  robot_lab_demo_two_trucks.launch  robot_lab_demo_two_trucks_marshalling_lane.launch  robot_lab_demo_two_trucks_smp.launch  single_robot_calibration.launch  single_truck.launch
coordination_oru_ros/missions/: NCFMScenarioMS1MissionsSmp.xml  NCFMScenarioMS2Missions-sim.xml  NCFMScenarioMS2Missions.xml  RobotLabScenarioMS2Missions.xml  RobotLabScenarioMS2MissionsMarshallingLane.xml  RobotLabScenarioMS2Missions_prel.xml  aass_basement_goal_sequence.txt  aass_basement_locations.txt  arena_goal_sequence.txt  arena_goal_sequence_3.txt  arena_goal_sequence_4.txt  arena_locations.txt  arena_locations_2.txt  arena_locations_3.txt  arena_locations_4.txt  robot_lab_goal_sequence_udp.txt  robot_lab_locations.txt  robot_lab_locations_udp.txt
coordination_oru_ros/missions/output/: G1-G4a2.path  START_0-G4a2.path  START_2-G4a2.path  START_3-G4a2.path  START_3-G4b.path  START_5-G4b.path
coordination_oru_ros/paths/: L_4-R_4.path  L_6-R_6.path  R_2-L_2.path
coordination_oru_ros/paths-dl/: R_0-L_0.path  R_6-L_6.path
coordination_oru_ros/paths-good/: L_0-R_0.path  R_8-L_8.path
(+92 files in other folders)
